force-app/main/default/objects/Opportunity/fields/bypassGrill__c.field-meta.xml
<CustomField>
    <fullName>bypassGrill__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Variable pour bypasser le Trigger qui cree automatiquement les Quotes</description>
    <label>bypassGrill</label>
    <type>Checkbox</type>
</CustomField>