force-app/main/default/objects/Opportunity/fields/Commentaire_Comparatif__c.field-meta.xml
<CustomField>
    <fullName>Commentaire_Comparatif__c</fullName>
    <label>Template Commentaire</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>