force-app/main/default/objects/Opportunity/fields/Commercial__c.field-meta.xml
<CustomField>
    <fullName>Commercial__c</fullName>
    <formula>Demande_Cotation__r.Owner:User.FirstName + &apos; &apos; +  Demande_Cotation__r.Owner:User.LastName</formula>
    <label>Commercial</label>
    <type>Text</type>
</CustomField>