force-app/main/default/objects/Opportunity/fields/currency_code__c.field-meta.xml
<CustomField>
    <fullName>currency_code__c</fullName>
    <defaultValue>&apos;EUR&apos;</defaultValue>
    <label>currency_code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>