force-app/main/default/objects/Opportunity/fields/Demande_Cotation__c.field-meta.xml
<CustomField>
    <fullName>Demande_Cotation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demande de cotation</label>
    <referenceTo>Demande_Cotation__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>