force-app/main/default/objects/Opportunity/fields/GCLID__c.field-meta.xml
<CustomField>
    <fullName>GCLID__c</fullName>
    <formula>Account.GCLID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GCLID</label>
    <type>Text</type>
</CustomField>