force-app/main/default/objects/Opportunity/fields/Liste_fournisseurs__c.field-meta.xml
<CustomField>
    <fullName>Liste_fournisseurs__c</fullName>
    <label>Choix fournisseurs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fournisseur</valueSetName>
    </valueSet>
</CustomField>