force-app/main/default/objects/Opportunity/fields/Nombre_de_fournisseur__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_fournisseur__c</fullName>
    <formula>PICKLISTCOUNT(Liste_fournisseurs__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de fournisseur</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>