force-app/main/default/objects/Opportunity/fields/Nombre_de_PDE__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_PDE__c</fullName>
    <label>Nombre de PDE</label>
    <summaryForeignKey>OpportunityPDERelation__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>