force-app/main/default/objects/Opportunity/fields/Nombre_offre__c.field-meta.xml
<CustomField>
    <fullName>Nombre_offre__c</fullName>
    <label>Nombre d&apos;offre</label>
    <summaryFilterItems>
        <field>Quote.Tech_situationActuelle__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>