force-app/main/default/objects/Opportunity/fields/ResponsableCotation__c.field-meta.xml
<CustomField>
    <fullName>ResponsableCotation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable de la cotation</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>