force-app/main/default/objects/Opportunity/fields/Section_acheminement__c.field-meta.xml
<CustomField>
    <fullName>Section_acheminement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Section acheminement</label>
    <type>Checkbox</type>
</CustomField>