force-app/main/default/objects/Opportunity/fields/Section_contribution__c.field-meta.xml
<CustomField>
    <fullName>Section_contribution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Section contribution</label>
    <type>Checkbox</type>
</CustomField>