force-app/main/default/objects/Opportunity/fields/Section_TTC__c.field-meta.xml
<CustomField>
    <fullName>Section_TTC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Section TTC</label>
    <type>Checkbox</type>
</CustomField>