force-app/main/default/objects/Opportunity/fields/SectionPrixConstates__c.field-meta.xml
<CustomField>
    <fullName>SectionPrixConstates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Section : Prix Constatés</label>
    <type>Checkbox</type>
</CustomField>