force-app/main/default/objects/Opportunity/fields/SectionPropositionRenouvellement__c.field-meta.xml
<CustomField>
    <fullName>SectionPropositionRenouvellement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Section : Proposition de renouvellement</label>
    <type>Checkbox</type>
</CustomField>