force-app/main/default/objects/Opportunity/fields/SectionSituationActuelle__c.field-meta.xml
<CustomField>
    <fullName>SectionSituationActuelle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Section : Situation Actuelle</label>
    <type>Checkbox</type>
</CustomField>