force-app/main/default/objects/Opportunity/fields/signataire_mail__c.field-meta.xml
<CustomField>
    <fullName>signataire_mail__c</fullName>
    <label>signataire_mail</label>
    <type>Email</type>
</CustomField>