force-app/main/default/objects/Opportunity/fields/signataire_phone__c.field-meta.xml
<CustomField>
    <fullName>signataire_phone__c</fullName>
    <label>signataire_phone</label>
    <type>Phone</type>
</CustomField>