force-app/main/default/objects/Opportunity/fields/TECH_Account_Siret__c.field-meta.xml
<CustomField>
    <fullName>TECH_Account_Siret__c</fullName>
    <formula>Account.Siret__c</formula>
    <label>Siret</label>
    <type>Text</type>
</CustomField>