force-app/main/default/objects/Opportunity/fields/TECH_FTA__c.field-meta.xml
<CustomField>
    <fullName>TECH_FTA__c</fullName>
    <label>TECH_FTA</label>
    <length>9</length>
    <type>Text</type>
</CustomField>