force-app/main/default/objects/Opportunity/fields/TECH_IsC5__c.field-meta.xml
<CustomField>
    <fullName>TECH_IsC5__c</fullName>
    <formula>ISPICKVAL( TemplateCotation__c ,&apos;C5&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Is C5</label>
    <type>Checkbox</type>
</CustomField>