force-app/main/default/objects/Opportunity/fields/TECH_IsCN__c.field-meta.xml
<CustomField>
    <fullName>TECH_IsCN__c</fullName>
    <formula>ISPICKVAL( TemplateCotation__c ,&apos;C1/C2/C3/C4&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Is C1/C2/C3/C4</label>
    <type>Checkbox</type>
</CustomField>