force-app/main/default/objects/Opportunity/fields/TECH_IsGaz__c.field-meta.xml
<CustomField>
    <fullName>TECH_IsGaz__c</fullName>
    <formula>ISPICKVAL( TemplateCotation__c ,&apos;Gaz&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Is Gaz</label>
    <type>Checkbox</type>
</CustomField>