force-app/main/default/objects/Opportunity/fields/TECH_Manager_du_commercial__c.field-meta.xml
<CustomField>
    <fullName>TECH_Manager_du_commercial__c</fullName>
    <formula>Demande_Cotation__r.TECH_Owner_Manger_Mail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager du commercial</label>
    <type>Text</type>
</CustomField>