force-app/main/default/objects/Opportunity/fields/TECH_NomOpportunite__c.field-meta.xml
<CustomField>
    <fullName>TECH_NomOpportunite__c</fullName>
    <formula>Account.Name &amp;&quot;-&quot;&amp; TECH_FTA__c &amp;&quot;-&quot;&amp; TEXT(DAY(today()))&amp;TEXT(MONTH(today()))&amp;TEXT(YEAR(today()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_NomOpportunite</label>
    <type>Text</type>
</CustomField>