force-app/main/default/objects/Opportunity/fields/TECH_PartenaireLogo__c.field-meta.xml
<CustomField>
    <fullName>TECH_PartenaireLogo__c</fullName>
    <formula>CASE( TECH_PartenaireName__c,
&quot;Nos réseaux&quot;,&quot;nos_réseaux.png&quot;,
&quot;3c Energies&quot;,&quot;3C.png&quot;,
&quot;Liberté Bleue&quot;,&quot;liberté_bleue.jpg&quot;,
&quot;Omega Energie&quot;,&quot;OMEGA ENERGIE.png&quot;,
&quot;Consutiv Utilities&quot;,&quot;CU.png&quot;,
&quot;PWE Consulting&quot;,&quot;pwe.jpg&quot;,
&quot;NONE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_PartenaireLogo</label>
    <type>Text</type>
</CustomField>