force-app/main/default/objects/Opportunity/fields/TECH_PartenaireName__c.field-meta.xml
<CustomField>
    <fullName>TECH_PartenaireName__c</fullName>
    <formula>Owner.Contact.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_PartenaireName</label>
    <type>Text</type>
</CustomField>