force-app/main/default/objects/Opportunity/fields/TemplateCotation__c.field-meta.xml
<CustomField>
    <fullName>TemplateCotation__c</fullName>
    <label>Template Cotation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C5</fullName>
            </value>
            <value>
                <fullName>C5 4 postes</fullName>
            </value>
            <value>
                <fullName>C1/C2/C3/C4</fullName>
            </value>
            <value>
                <fullName>Gaz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>