force-app/main/default/objects/Opportunity/fields/Valeur_des_contrats__c.field-meta.xml
<CustomField>
    <fullName>Valeur_des_contrats__c</fullName>
    <label>Valeur des contrats</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>