force-app/main/default/objects/Opportunity/fields/Visuel_partenaire__c.field-meta.xml
<CustomField>
    <fullName>Visuel_partenaire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visuel partenaire</label>
    <type>Checkbox</type>
</CustomField>