force-app/main/default/objects/Opportunity/fields/Visuel_PWE__c.field-meta.xml
<CustomField>
    <fullName>Visuel_PWE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visuel PWE</label>
    <type>Checkbox</type>
</CustomField>