force-app/main/default/objects/Opportunity/recordTypes/Masse_C1C2C3C4.recordType-meta.xml
<RecordType>
    <fullName>Masse_C1C2C3C4</fullName>
    <active>true</active>
    <businessProcess>Sales</businessProcess>
    <description>Opportunités possédant beaucoup de points d&apos;énergie C1C2C3C4</description>
    <label>Masse C1C2C3C4</label>
</RecordType>