force-app/main/default/objects/Opportunity/recordTypes/Masse_C5.recordType-meta.xml
<RecordType>
    <fullName>Masse_C5</fullName>
    <active>true</active>
    <businessProcess>Sales</businessProcess>
    <description>Opportunités possédant beaucoup de points d&apos;énergie C5</description>
    <label>Masse C5</label>
</RecordType>