force-app/main/default/objects/Opportunity/recordTypes/Masse_C5_4_Postes.recordType-meta.xml
<RecordType>
    <fullName>Masse_C5_4_Postes</fullName>
    <active>true</active>
    <businessProcess>Sales</businessProcess>
    <description>Opportunités possédant beaucoup de points d&apos;énergie C5 4 Postes</description>
    <label>Masse C5 4 Postes</label>
</RecordType>