force-app/main/default/objects/Opportunity/recordTypes/Masse_GAZ.recordType-meta.xml
<RecordType>
    <fullName>Masse_GAZ</fullName>
    <active>true</active>
    <businessProcess>Sales</businessProcess>
    <description>Opportunités possédant beaucoup de points d&apos;énergie Gaz</description>
    <label>Masse GAZ</label>
</RecordType>