force-app/main/default/objects/Opportunity/recordTypes/Opportunity_Partner.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Partner</fullName>
    <active>true</active>
    <businessProcess>Sales</businessProcess>
    <label>Partenaire</label>
</RecordType>