force-app/main/default/objects/Opportunity/recordTypes/Opportunity_Sales.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Sales</fullName>
    <active>true</active>
    <businessProcess>Sales</businessProcess>
    <label>Sales</label>
</RecordType>