force-app/main/default/objects/Opportunity/recordTypes/Simple_C1C2C3C4.recordType-meta.xml
<RecordType>
    <fullName>Simple_C1C2C3C4</fullName>
    <active>true</active>
    <businessProcess>Sales</businessProcess>
    <description>Opportunités possédant peu de points d&apos;énergie C1C2C3C4</description>
    <label>Simple C1C2C3C4</label>
</RecordType>