force-app/main/default/objects/Opportunity/recordTypes/Simple_C5.recordType-meta.xml
<RecordType>
    <fullName>Simple_C5</fullName>
    <active>true</active>
    <businessProcess>Sales</businessProcess>
    <description>Opportunités possédant peu de points d&apos;énergie C5</description>
    <label>Simple C5</label>
</RecordType>