force-app/main/default/objects/Opportunity/recordTypes/Simple_C5_4_Postes.recordType-meta.xml
<RecordType>
    <fullName>Simple_C5_4_Postes</fullName>
    <active>true</active>
    <businessProcess>Sales</businessProcess>
    <description>Opportunités possédant peu de points d&apos;énergie C5 4 Postes</description>
    <label>Simple C5 4 Postes</label>
</RecordType>