force-app/main/default/objects/Opportunity/recordTypes/Simple_Gaz.recordType-meta.xml
<RecordType>
    <fullName>Simple_Gaz</fullName>
    <active>true</active>
    <businessProcess>Sales</businessProcess>
    <description>Opportunités possédant peu de points d&apos;énergie Gaz</description>
    <label>Simple Gaz</label>
</RecordType>