force-app/main/default/objects/Opportunity/listViews/Toutes_les_opportunit_s_Attente_valida.listView-meta.xml
<ListView>
    <fullName>Toutes_les_opportunit_s_Attente_valida</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Attente de validation</value>
    </filters>
    <label>En attente validation</label>
</ListView>